# jmswm

./: .gitignore  .hgignore  CMakeLists.txt  COMPILE  Makefile  README  README.md  TODO  menu-notes.txt  notes.org  notes.txt  simple_build.sh  test.sh  waf  wscript
build-config/: compile-flags  components  draw-objects  link-flags  menu-objects  style-objects  util-objects  wm-objects
config/: emacs.example.el  style  zshrc.example
draw/: draw.cpp  draw.hpp
menu/: file_completion.cpp  file_completion.hpp  list_completion.cpp  list_completion.hpp  menu.cpp  menu.hpp  url_completion.cpp  url_completion.hpp
src/draw/: draw.hpp
src/menu/: file_completion.cpp  file_completion.hpp  list_completion.cpp  list_completion.hpp  menu.cpp  menu.hpp
src/style/: db.cpp  db.hpp  scanner.hpp
src/util/: close_on_exec.cpp  event.cpp  event.hpp  hook.hpp  log.cpp  log.hpp  path.cpp  range.hpp  spawn.hpp  time.hpp
src/wm/: all.hpp  atoms.hpp  bar.cpp  bar.hpp  client.cpp  client.hpp  commands.cpp  commands.hpp  event.cpp  event.hpp  frame.cpp  frame.hpp  key.cpp  main.cpp  persistence.cpp  persistence.hpp  sizehint.cpp  sizehint.hpp  view.cpp  view.hpp  wm.cpp  wm.hpp  xwindow.cpp  xwindow.hpp
src/wm/extra/: bar_view_applet.cpp  bar_view_applet.hpp  battery_applet.cpp  cwd.cpp  device_applet.cpp  device_applet.hpp  erc_applet.hpp  fullscreen.cpp  gnus_applet.cpp  network_applet.cpp  network_applet.hpp  place.cpp  previous_view.hpp  view_columns.cpp  view_columns.hpp  volume_applet.hpp  web_browser.cpp  web_browser.hpp
style/: common.hpp  db.cpp  db.hpp  style.hpp
util/: close_on_exec.hpp  event.cpp  event.hpp  log.cpp  log.hpp  path.cpp  path.hpp  property.hpp  range.hpp  spawn.cpp  spawn.hpp  string.hpp  time.hpp  weak_iptr.hpp
waftools/: c_fast_and_dumb_preproc.py  cxx_autodep.py
wm/: all.hpp  atoms.h  atoms.hpp  bar.cpp  bar.hpp  client.cpp  commands.cpp  commands.hpp  define_style.hpp  event.cpp  frame.cpp  key.cpp  key.hpp  main.cpp  persistence.cpp  sizehint.cpp  view.cpp  volume.cpp  volume.hpp  wm.cpp  wm.hpp  xwindow.cpp  xwindow.hpp
wm/extra/: bar_view_applet.cpp  bar_view_applet.hpp  battery_applet.cpp  battery_applet.hpp  cwd.cpp  cwd.hpp  device_applet.cpp  device_applet.hpp  erc_applet.cpp  erc_applet.hpp  fullscreen.cpp  fullscreen.hpp  gnus_applet.cpp  gnus_applet.hpp  network_applet.cpp  network_applet.hpp  place.hpp  time_applet.hpp  view_columns.hpp  volume_applet.cpp  volume_applet.hpp  web_browser.cpp  web_browser.hpp
